Add ping endpoint and update application.properties