@@ -1,30 +1,49 @@
 package com.majlishekhidmat.service;
 
-import org.springframework.beans.factory.annotation.Value;
+
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
-
+import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
+import java.util.UUID;
 
 @Service
 public class ProfilePicUploadService {
 
-    @Value("${file.upload-dir}")
-    private String uploadDir;
+    private final String UPLOAD_DIR = "./uploads/user/"; // Sahi path
 
     public String saveProfilePic(MultipartFile file) throws IOException {
-        Path uploadPath = Path.of(uploadDir);
+        if (file.isEmpty()) {
+            throw new IOException("Failed to store empty file.");
+        }
+
+        // Directory check
+        Path uploadPath = Paths.get(UPLOAD_DIR);
         if (!Files.exists(uploadPath)) {
             Files.createDirectories(uploadPath);
         }
 
-        String fileName = System.currentTimeMillis() + "_" + file.getOriginalFilename();
-        Path filePath = uploadPath.resolve(fileName);
-        Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
+        try {
+            // File ko ek unique naam dein
+            String originalFileName = file.getOriginalFilename();
+            String fileExtension = "";
+            int dotIndex = originalFileName.lastIndexOf('.');
+            if (dotIndex > 0) {
+                fileExtension = originalFileName.substring(dotIndex);
+            }
+            String uniqueFileName = UUID.randomUUID().toString() + fileExtension;
+            
+            Path filePath = uploadPath.resolve(uniqueFileName);
+            Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
 
-        return uploadDir + "/" + fileName; // relative path for frontend
+            // Relative path return karein
+            return UPLOAD_DIR + uniqueFileName;
+        } catch (IOException e) {
+            throw new IOException("Failed to save file: " + e.getMessage());
+        }
     }
 }
